Fixed the Upper Nav so that it's width doesn't surpass the UI width on mobile. Also, fixed the animations to use the correct syntax (fadInAnimated(delay: x sec))

--- a/frontend/src/App/styles/abstracts/_animations.scss
+++ b/frontend/src/App/styles/abstracts/_animations.scss
@@ -4,106 +4,6 @@
   animation-delay: $delay;  // NOTE: animation-delay must come after animation, as animation uses a shorthand property and thus sets the delay back to 0s.
 }
 
-
-
-
-//////////////////
-
-@mixin fadeInAnimated__0() {
-  opacity: 0;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__1() {
-  opacity: 0;
-  animation-delay: 1s;
-  animation: fadeIn 2s forwards;
-}
-
-// @mixin fadeInAnimated() {
-//   opacity: 0;
-//   animation-delay: 10s;
-//   animation: fadeIn 2s forwards;
-// }
-
-@mixin fadeInAnimated__1-5() {
-  opacity: 0;
-  animation-delay: 1.5s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__2() {
-  opacity: 0;
-  animation-delay: 2s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__2-25() {
-  opacity: 0;
-  animation-delay: 2.25s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__2-5() {
-  opacity: 0;
-  animation-delay: 2.25s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__3() {
-  opacity: 0;
-  animation-delay: 3s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__3-25() {
-  opacity: 0;
-  animation-delay: 3.25s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__4() {
-  opacity: 0;
-  animation-delay: 4s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__4-5() {
-  opacity: 0;
-  animation-delay: 4.5s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__5() {
-  opacity: 0;
-  animation-delay: 5s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__6() {
-  opacity: 0;
-  animation-delay: 6s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__7() {
-  opacity: 0;
-  animation-delay: 7s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__8() {
-  opacity: 0;
-  animation-delay: 8s;
-  animation: fadeIn 2s forwards;
-}
-
-@mixin fadeInAnimated__9() {
-  opacity: 0;
-  animation-delay: 9s;
-  animation: fadeIn 2s forwards;
-}
-
 ////////////////////////////////
 
 @keyframes fadeIn {
